Fix for nolegend and add missing padding

--- a/app/soc/content/css/v2/gsoc/forms.less
+++ b/app/soc/content/css/v2/gsoc/forms.less
@@ -55,8 +55,7 @@
     fieldset {
         background: #cde5f5;
         margin: 0 23px 16px 23px;
-        padding: 30px 0 0 0;
-        
+        padding: 30px 0 11px 0;
         .row {/*every row*/
             margin: 0 0 6px 11px;
             width: 497px;
@@ -163,6 +162,9 @@
                 width: 254px;
             }
         }
+    }
+    fieldset.nolegend {
+        padding: 11px 0;
     }
     .fieldset-basicinfo {/*first fieldset on the registration page*/
         clear: both;
